Do not use branch settings for PP Development

--- a/Templates/Per Tenant Extension/.github/workflows/PullPowerPlatformChanges.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PullPowerPlatformChanges.yaml
@@ -72,7 +72,7 @@ jobs:
         with:
           shell: powershell
           getEnvironments: ${{ inputs.environment }}
-          type: 'Publish'
+          type: 'All'
 
       - name: Set Power Platform solution folder
         env:
