--- a/Templates/Per Tenant Extension/.github/workflows/PushPowerPlatformChanges.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PushPowerPlatformChanges.yaml
@@ -63,7 +63,7 @@ jobs:
         with:
           shell: powershell
           getEnvironments: ${{ inputs.environment }}
-          type: 'Publish'
+          type: 'All'
 
       - name: Set Power Platform solution folder
         env:
