--- a/Templates/AppSource App/.github/workflows/_BuildALGoProject.yaml
+++ b/Templates/AppSource App/.github/workflows/_BuildALGoProject.yaml
@@ -1,6 +1,6 @@
 name: '_Build AL-Go project'
 
-run-name: 'Build project ${{ inputs.project }}'
+run-name: 'Build AL ${{ inputs.project }}'
 
 on:
   workflow_call:
@@ -83,7 +83,7 @@ jobs:
     defaults:
       run:
         shell: ${{ inputs.shell }}
-    name: ${{ inputs.projectName }} (${{ inputs.buildMode }})
+    name: '${{ inputs.projectName }} (${{ inputs.buildMode }})'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -96,7 +96,7 @@ jobs:
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
-          get: useCompilerFolder,keyVaultCodesignCertificateName,doNotSignApps,doNotRunTests,artifact,generateDependencyArtifact,type,powerPlatformSolutionFolder,appRevision,appBuild
+          get: useCompilerFolder,keyVaultCodesignCertificateName,doNotSignApps,doNotRunTests,artifact,generateDependencyArtifact,type,appRevision,appBuild
 
       - name: Read secrets
         id: ReadSecrets
@@ -107,19 +107,7 @@ jobs:
           gitHubSecrets: ${{ toJson(secrets) }}
           getSecrets: '${{ inputs.secrets }},appDependencyProbingPathsSecrets'
 
-      - name: Determine Source Type
-        env:
-          project: ${{ inputs.project }}
-        run: |
-          if ($env:powerPlatformSolutionFolder -eq $env:project) {
-            $sourceType = 'PP'
-          } else {
-            $sourceType = 'AL'
-          }
-          Add-Content -encoding UTF8 -Path $env:GITHUB_ENV -value "sourceType=$sourceType"
-
       - name: Determine ArtifactUrl
-        if: env.sourceType == 'AL'
         id: determineArtifactUrl
         uses: microsoft/AL-Go-Actions/DetermineArtifactUrl@main
         with:
@@ -128,14 +116,13 @@ jobs:
           project: ${{ inputs.project }}
 
       - name: Cache Business Central Artifacts
-        if: env.useCompilerFolder == 'True' && inputs.useArtifactCache && env.artifactCacheKey && env.sourceType == 'AL'
+        if: env.useCompilerFolder == 'True' && inputs.useArtifactCache && env.artifactCacheKey
         uses: actions/cache@v4
         with:
           path: .artifactcache
           key: ${{ env.artifactCacheKey }}
 
       - name: Download Project Dependencies
-        if: env.sourceType == 'AL'
         id: DownloadProjectDependencies
         uses: microsoft/AL-Go-Actions/DownloadProjectDependencies@main
         env:
@@ -148,7 +135,6 @@ jobs:
           baselineWorkflowRunId: ${{ inputs.baselineWorkflowRunId }}
 
       - name: Build AL
-        if: env.sourceType == 'AL'
         uses: microsoft/AL-Go-Actions/RunPipeline@main
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
@@ -162,20 +148,8 @@ jobs:
           installAppsJson: ${{ steps.DownloadProjectDependencies.outputs.DownloadedApps }}
           installTestAppsJson: ${{ steps.DownloadProjectDependencies.outputs.DownloadedTestApps }}
 
-      - name: Build PP
-        if: env.type == 'PTE' && env.sourceType == 'PP' && inputs.buildMode == 'default'
-        uses: microsoft/AL-Go-Actions/BuildPowerPlatform@main
-        with:
-          shell: ${{ inputs.shell }}
-          parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
-          solutionFolder: ${{ inputs.project }}
-          outputFolder: ${{ inputs.project }}/.buildartifacts/_PowerPlatformSolution/
-          outputFileName: ${{ inputs.project }}
-          appRevision: ${{ env.appRevision }}
-          appBuild: ${{ env.appBuild }}
-
       - name: Sign
-        if: inputs.signArtifacts && env.doNotSignApps == 'False' && env.keyVaultCodesignCertificateName != '' && env.sourceType == 'AL'
+        if: inputs.signArtifacts && env.doNotSignApps == 'False' && env.keyVaultCodesignCertificateName != ''
         id: sign
         uses: microsoft/AL-Go-Actions/Sign@main
         with:
@@ -195,7 +169,7 @@ jobs:
           suffix: ${{ inputs.artifactsNameSuffix }}
 
       - name: Upload thisbuild artifacts - apps
-        if: inputs.publishThisBuildArtifacts && env.sourceType == 'AL'
+        if: inputs.publishThisBuildArtifacts
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildAppsArtifactsName }}
@@ -204,7 +178,7 @@ jobs:
           retention-days: 1
 
       - name: Upload thisbuild artifacts - dependencies
-        if: inputs.publishThisBuildArtifacts && env.sourceType == 'AL'
+        if: inputs.publishThisBuildArtifacts
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildDependenciesArtifactsName }}
@@ -213,7 +187,8 @@ jobs:
           retention-days: 1
 
       - name: Upload thisbuild artifacts - test apps
-        if: inputs.publishThisBuildArtifacts && env.sourceType == 'AL'
+        if: inputs.publishThisBuildArtifacts
+
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildTestAppsArtifactsName }}
@@ -223,23 +198,15 @@ jobs:
 
       - name: Publish artifacts - apps
         uses: actions/upload-artifact@v4
-        if: inputs.publishArtifacts && env.sourceType == 'AL'
+        if: inputs.publishArtifacts
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.AppsArtifactsName }}
           path: '${{ inputs.project }}/.buildartifacts/Apps/'
           if-no-files-found: ignore
 
-      - name: Publish artifacts - Power Platform Solution
-        uses: actions/upload-artifact@v4
-        if: inputs.publishArtifacts && env.type == 'PTE' && env.sourceType == 'PP'
-        with:
-          name: ${{ steps.calculateArtifactsNames.outputs.PowerPlatformSolutionArtifactsName }}
-          path: '${{ inputs.project }}/.buildartifacts/_PowerPlatformSolution/'
-          if-no-files-found: ignore
-
       - name: Publish artifacts - dependencies
         uses: actions/upload-artifact@v4
-        if: inputs.publishArtifacts && env.generateDependencyArtifact == 'True' && env.sourceType == 'AL'
+        if: inputs.publishArtifacts && env.generateDependencyArtifact == 'True'
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.DependenciesArtifactsName }}
           path: '${{ inputs.project }}/.buildartifacts/Dependencies/'
@@ -247,7 +214,7 @@ jobs:
 
       - name: Publish artifacts - test apps
         uses: actions/upload-artifact@v4
-        if: inputs.publishArtifacts && env.sourceType == 'AL'
+        if: inputs.publishArtifacts
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.TestAppsArtifactsName }}
           path: '${{ inputs.project }}/.buildartifacts/TestApps/'
@@ -263,7 +230,7 @@ jobs:
 
       - name: Publish artifacts - container event log
         uses: actions/upload-artifact@v4
-        if: (failure()) && (hashFiles(format('{0}/ContainerEventLog.evtx',inputs.project)) != '') && env.sourceType == 'AL'
+        if: (failure()) && (hashFiles(format('{0}/ContainerEventLog.evtx',inputs.project)) != '')
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.ContainerEventLogArtifactsName }}
           path: '${{ inputs.project }}/ContainerEventLog.evtx'
@@ -271,7 +238,7 @@ jobs:
 
       - name: Publish artifacts - test results
         uses: actions/upload-artifact@v4
-        if: (success() || failure()) && (hashFiles(format('{0}/TestResults.xml',inputs.project)) != '') && env.sourceType == 'AL'
+        if: (success() || failure()) && (hashFiles(format('{0}/TestResults.xml',inputs.project)) != '')
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.TestResultsArtifactsName }}
           path: '${{ inputs.project }}/TestResults.xml'
@@ -279,7 +246,7 @@ jobs:
 
       - name: Publish artifacts - bcpt test results
         uses: actions/upload-artifact@v4
-        if: (success() || failure()) && (hashFiles(format('{0}/bcptTestResults.json',inputs.project)) != '') && env.sourceType == 'AL'
+        if: (success() || failure()) && (hashFiles(format('{0}/bcptTestResults.json',inputs.project)) != '')
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.BcptTestResultsArtifactsName }}
           path: '${{ inputs.project }}/bcptTestResults.json'
@@ -287,7 +254,7 @@ jobs:
 
       - name: Analyze Test Results
         id: analyzeTestResults
-        if: (success() || failure()) && env.doNotRunTests == 'False' && env.sourceType == 'AL'
+        if: (success() || failure()) && env.doNotRunTests == 'False'
         uses: microsoft/AL-Go-Actions/AnalyzeTests@main
         with:
           shell: ${{ inputs.shell }}
